Version finale corrigé
-Reprise du premier commit propre car trop d'erreur dans les tests effectué pour l'amélioration du code.
-Test des endpoints/services
-Reprise du Readme